--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
 
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -48,6 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
+
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
 }
